feat: update cloudflare for login form (90%)

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,6 +37,7 @@
   --color-pj-black: #000000;
   --color-pj-brown: #434141;
   --color-pj-orange: #F07272;
+  --color-pj-blue-dark: #052863;
   --color-pj-input-focus: #0b0b0b;
 
   --animate-accordion-down: accordion-down 0.2s ease-out;
