feat: fix check token session + remove cloudflare + add botid + add layout teaser

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -62,6 +62,7 @@
   --color-pj-red-light: #f8d7da;
   --color-pj-red-medium: #721c24;
   --color-pj-grey-lightest: #eeeded;
+  --color-pj-grey-medium: #565656;
   --color-pj-grey-light: #6a6a6b;
   --color-pj-grey: #414242;
   --color-pj-blue: #1d7ed8;
